# encodec-api

./: .dockerignore  Cargo.toml  README.md
.github/workflows/: build-image.yml  deploy-eks.yml  deploy-main.yml
deploy/: linode_api.py
deploy/eks/: manual-deploy.sh
deploy/k8s/encodec-api/: ingress-configmap.yaml  ingress-deployment.yaml  ingress.yaml  kustomization.yaml  namespace.yaml  serviceaccount.yaml  services.yaml  storage.yaml  worker-configmap.yaml  worker-deployment.yaml
deploy/kubeadm/: manual-deploy.sh
deploy/lke/: manual-deploy.sh
docker/: encodec-api-ingress.Dockerfile  encodec-api-opus-base.Dockerfile  encodec-api-worker.Dockerfile
src/: config.rs  encode.rs  ingress.rs  lib.rs  main.rs  protocol.rs  router.rs  worker.rs
