[package]
name = "encodec-api"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Rust web-service wrapper around encodec-rs"
repository = "https://github.com/wavey-ai/encodec-api"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
av-api = { git = "https://github.com/wavey-ai/av-api.git", rev = "e22fe122a9e25573d7e7d109b0f751eb96ba8d53" }
base64 = "0.22"
bytes = "1.10"
clap = { version = "4.5", features = ["derive", "env"] }
dotenvy = "0.15"
encodec-rs = { git = "https://github.com/wavey-ai/encodec-rs.git", rev = "c4254f8fd81873470da5f16174c267dd67b37fa9", features = ["onnx"] }
futures-util = "0.3"
gpu-worker-upload-response = { git = "https://github.com/wavey-ai/gpu-workers.git", package = "gpu-worker-upload-response", rev = "e7e7843e78bb4d4a91ecd5ad10cfd73ab35da39a" }
http = "1.3"
http-pack = { git = "https://github.com/wavey-ai/http-pack.git", default-features = false }
hyper = "1.7"
hyper-util = { version = "0.1", features = ["tokio"] }
image = { version = "0.25", default-features = false, features = ["png"] }
multer = "3.1"
ndarray = "0.17.2"
reqwest = { version = "0.12", features = ["rustls-tls", "http2"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
soundkit-decoder = { git = "https://github.com/wavey-ai/soundkit.git", package = "soundkit-decoder", rev = "4554b416fb03d7a06c52d5306f53acb517343df5" }
thiserror = "2.0"
tokio = { version = "1.48", features = ["macros", "rt-multi-thread", "signal", "sync", "time", "fs"] }
tokio-tungstenite = "0.27"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
upload-response = { git = "https://github.com/wavey-ai/web-services.git", package = "upload-response", rev = "b5d4a2ea04181cd98ffebd07cd55d43c4963aea0" }
url = "2.5"
uuid = { version = "1.18", features = ["v4"] }
web-service = { git = "https://github.com/wavey-ai/web-services.git", package = "web-service", rev = "b5d4a2ea04181cd98ffebd07cd55d43c4963aea0" }
